--- a/vercel.json
+++ b/vercel.json
@@ -2,85 +2,13 @@
   "builds": [
     {
       "src": "index.js",
-      "use": "@vercel/node@latest"
+      "use": "@vercel/node"
     },
     {
-      "src": "/**",
+      "src": "build/**",
       "use": "@vercel/static"
     }
   ],
-  "routes": [
-    {
-      "src": "/products",
-      "dest": "index.js"
-    },
-    {
-      "src": "/products/(.*)",
-      "dest": "index.js"
-    },
-    {
-      "src": "/categories",
-      "dest": "index.js"
-    },
-    {
-      "src": "/categories/(.*)",
-      "dest": "index.js"
-    },
-    {
-      "src": "/brands",
-      "dest": "index.js"
-    },
-    {
-      "src": "/brands/(.*)",
-      "dest": "index.js"
-    },
-    {
-      "src": "/users",
-      "dest": "index.js"
-    },
-    {
-      "src": "/users/(.*)",
-      "dest": "index.js"
-    },
-    {
-      "src": "/auth",
-      "dest": "index.js"
-    },
-    {
-      "src": "/auth/(.*)",
-      "dest": "index.js"
-    },
-    {
-      "src": "/cart",
-      "dest": "index.js"
-    },
-    {
-      "src": "/cart/(.*)",
-      "dest": "index.js"
-    },
-    {
-      "src": "/orders",
-      "dest": "index.js"
-    },
-    {
-      "src": "/orders/(.*)",
-      "dest": "index.js"
-    },
-    {
-      "src": "/webhook",
-      "dest": "index.js"
-    },
-    {
-      "src": "/create-payment-intent",
-      "dest": "index.js"
-    },
-    {
-      "src": "/",
-      "dest": "dist/index.html"
-    },
-    {
-      "src": "/(.+)",
-      "dest": "dist/$1"
-    }
-  ]
+
+  "rewrites": [{ "source": "/(.*)", "destination": "index.js" }]
 }
