--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "i": "^0.3.7",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.0",
+    "nodemailer": "^6.9.15",
     "nodemon": "^3.1.4",
     "npm": "^10.8.3",
     "passport": "^0.7.0",
