--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "googleapis": "^144.0.0",
     "i": "^0.3.7",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.0",
@@ -24,6 +25,7 @@
     "nodemon": "^3.1.4",
     "npm": "^10.8.3",
     "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "stripe": "^16.10.0"
