--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "passport-facebook": "^3.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "querystring": "^0.2.1",
     "stripe": "^16.10.0"
   }
 }
