--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "npm": "^10.8.3",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "querystring": "^0.2.1",
